--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/node": "^18.15.7",
     "@types/react-dom": "^18.0.10",
     "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
@@ -27,7 +28,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "pg": "^8.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.12"
   }
 }
