--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/express": "^4.17.16",
     "@types/node": "^18.15.7",
     "@types/react-dom": "^18.0.10",
+    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.3",
+    "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.0",
