--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.3",
+    "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.0",
