--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^18.15.7",
     "@types/react-dom": "^18.0.10",
     "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.3",
