--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
     "express": "^4.18.2",
     "pg": "^8.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.12"
   }
