--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "pg": "^8.10.0",
     "react": "^18.2.0",
